kustomize/jddesk/display/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jddesk-display
spec:
  type: ClusterIP
  selector:
    app: jddesk-display
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
