kustomize/jddesk/display/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jddesk-display
spec:
  rules:
    - host: jddesk.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jddesk-display
                port:
                  number: 5000
